--- a/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/index.html
+++ b/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-
+    <script src="dist/index.js"/>
     <!-- TODO: 웹팩으로 빌드한 자바스크립트를 여기에 로딩하세요 -->
   </body>
 </html>
